record state to p1